--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>cosmos</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cosmos</name>
+    <name>HotelApp</name>
     <description>Event Management and Notices</description>
 
     <properties>
@@ -128,27 +128,6 @@
             <version>2.0.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.firebase</groupId>
-            <artifactId>firebase-admin</artifactId>
-            <version>6.11.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>libraries-bom</artifactId>
-            <version>3.2.0</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-gcp-dependencies</artifactId>
-            <version>1.1.2.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
 
 
 
